Issue #2682941 by ptsimard: File icon too close to filename

--- a/sass/wetkit_widgets.scss
+++ b/sass/wetkit_widgets.scss
@@ -6,4 +6,5 @@
 img.file-icon,
 div.file-widget img {
   vertical-align: middle;
+  margin-right: 2px;
 }
